feat,refactor(infra): Refatoração do schema do banco e criação de scripts para infra
Adiciona ao schema do banco as tabelas de usuários/autorização
Adiciona scripts para geração automática do schema do banco e para geração da tabela de hierarquia dos scopes
